--- a/stuffs.html
+++ b/stuffs.html
@@ -8,6 +8,7 @@
     <ol type="I">
       <li>I have collected many stuffs like :- </li>
     </ol>
+    <br>
     <ol type="i">
       <li>I have a <strong><em>Shape bending Weapon</em></strong>.</li>
       <img src="https://cdn.shopify.com/s/files/1/0351/9630/5545/products/Bandai-Sword-Art-Online-Alicization-War-of-Underworld-PROPLICA-Sword-of-the-Night-Sky-Kirito-9_f9cc5f8c-031b-44ec-ae1f-10afa15b9391_1200x.jpg?v=1630782243"
@@ -19,6 +20,7 @@
           <li>For now its a sword.</li>
         </ul>
       </ul>
+      <br>
       <li>I have a <a href="https://en.wikipedia.org/wiki/Phoenix"><strong><em>Phoenix</em></strong></a>.</li>
       <img src="https://miro.medium.com/max/1024/0*UwJPynmx876D3BY-.jpg" alt="Legendry Phoenix" height="400" width="400">
       <ul type="disc">
@@ -29,11 +31,12 @@
           <li>It helps me in all the situations.</li>
         </ul>
       </ul>
+      <br>
       <li>I also have a <strong><em>Staff</em></strong>.</li>
       <ul type="disc">
         <li>I have crafted it myself by all the hardships I have endured and can also say it is in comparable to the weapon that I mentioned above or even more powerfull.</li>
         <ul type="circle">
-          <img src="E:\Photos\staff.png" alt="Mighty Staff" height="600" width="200">
+          <img src="staff.png" alt="Mighty Staff" height="600" width="200">
           <li>It increase my magic powers by many folds.</li>
           <li>It has the rarest of gems and item embedded in it with a ceertain technique that I developed.</li>
           <ul type="square">
